<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tv_item_notice_title"
            style="@style/TextView.Label.Medium.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/notice_sentece_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_notice_spoonfeed"
            style="@style/TextView.Label.Regular.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/notice_spoonfeed"
            android:textColor="@color/comment_gray"
            app:layout_constraintStart_toStartOf="@id/tv_item_notice_title"
            app:layout_constraintTop_toBottomOf="@id/tv_item_notice_title" />

        <TextView
            android:id="@+id/tv_item_notice_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/mypostmanagement_dot"
            android:textColor="@color/comment_gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_notice_spoonfeed"
            app:layout_constraintStart_toEndOf="@id/tv_item_notice_spoonfeed"
            app:layout_constraintTop_toTopOf="@id/tv_item_notice_spoonfeed" />

        <TextView
            android:id="@+id/tv_item_notice_writed_data"
            style="@style/TextView.Label.Regular.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/mypostmanagement_comment_writed_date"
            android:textColor="@color/comment_gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_notice_dot"
            app:layout_constraintStart_toEndOf="@id/tv_item_notice_dot"
            app:layout_constraintTop_toTopOf="@id/tv_item_notice_dot" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>